kubernetes-networks/dashboard/web-ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port: 
                number: 80
        - path: /dashboard(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port: 
                number: 80
